--- a/Rottentomatoe.ipynb
+++ b/Rottentomatoe.ipynb
@@ -1599,7 +1599,7 @@
    "id": "3337f737-986b-4765-978e-3f6678dbf8d3",
    "metadata": {},
    "source": [
-    "this plot is a stacked bar plot for genre showing the rating. it seems that R rating is highest for all trypes of genre , especially for drama, followed by PG."
+    "this plot is a stacked bar plot for genre showing the rating. it seems that R(restricted) rating is highest for all trypes of genre , especially for drama, followed by PG(parent guidance)."
    ]
   },
   {
@@ -1737,10 +1737,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f4adfc-a676-43db-b62a-d08192fc142b",
+   "id": "f8f0222b-ed97-40f3-8fd6-0893022a1233",
    "metadata": {},
    "source": [
-    "it shows a scatter point of runtime and revenue generated for movies. and the movies in the range 100-150minutes seem to generate more money, it comparison to the longer or shorter movies. from this graph we can observe that Run time and Box office they don't have correlation"
+    "it shows a scatter point of runtime and revenue generated for movies. and the movies in the range 90-130minutes seem to generate more money, it comparison to the longer or shorter movies. from this graph we can observe that Run time and Box office they don't have correlation"
    ]
   },
   {
