--- a/tnbugets.ipynb
+++ b/tnbugets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
     "#loading data\n",
     "\n",
-    "df = pd.read_csv('tn.movie_budgets.csv')"
+    "tnbudgets_df = pd.read_csv('tn.movie_budgets.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 269,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,12 +137,12 @@
    "source": [
     "#viewing the top 5 rows\n",
     "\n",
-    "df.head()"
+    "tnbudgets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "5781       $181,041        $181,041  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,12 +248,12 @@
    "source": [
     "#viewing the last 5 rows\n",
     "\n",
-    "df.tail()"
+    "tnbudgets_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
    "source": [
     "#more information on the data\n",
     "\n",
-    "df.info()"
+    "tnbudgets_df.info()"
    ]
   },
   {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "4          317000000       620181382       1316721747  "
       ]
      },
-     "execution_count": 272,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,15 +399,15 @@
     "\n",
     "currency_cols = ['production_budget','domestic_gross','worldwide_gross']\n",
     "for x in currency_cols:\n",
-    "    df[x] = df[x].astype(str).replace({'\\$':'',',':''},regex = True)\n",
-    "    df[x] = df[x].astype(float)\n",
-    "    df[x] = df[x].round(0).astype(int)\n",
-    "df.head()"
+    "    tnbudgets_df[x] = tnbudgets_df[x].astype(str).replace({'\\$':'',',':''},regex = True)\n",
+    "    tnbudgets_df[x] = tnbudgets_df[x].astype(float)\n",
+    "    tnbudgets_df[x] = tnbudgets_df[x].round(0).astype(int)\n",
+    "tnbudgets_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "0"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
    "source": [
     "#check for duplicates\n",
     "\n",
-    "df.duplicated().sum()"
+    "tnbudgets_df.duplicated().sum()"
    ]
   },
   {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "[5415 rows x 6 columns]"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,24 +611,24 @@
    "source": [
     "#dropping rows where worlwide gross revenue is 0 as they are not helpful in this analysis. \n",
     "\n",
-    "df = df[df['worldwide_gross'] != 0]\n",
-    "df"
+    "tnbudgets_df = tnbudgets_df[tnbudgets_df['worldwide_gross'] != 0]\n",
+    "tnbudgets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
     "#dropping the id column because it is also not helpful in this analysis\n",
     "\n",
-    "df = df.drop('id', axis = 1)"
+    "tnbudgets_df = tnbudgets_df.drop('id', axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "[5415 rows x 5 columns]"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,13 +791,13 @@
    "source": [
     "#converting month and date into datetime\n",
     "\n",
-    "df['release_date'] = pd.to_datetime(df['release_date'])\n",
-    "df"
+    "tnbudgets_df['release_date'] = pd.to_datetime(tnbudgets_df['release_date'])\n",
+    "tnbudgets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
        "[5415 rows x 7 columns]"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,14 +984,14 @@
    "source": [
     "#extracting months and years from the release date\n",
     "\n",
-    "df['month'] = df['release_date'].dt.month\n",
-    "df['year'] = df['release_date'].dt.year\n",
-    "df"
+    "tnbudgets_df['month'] = tnbudgets_df['release_date'].dt.month\n",
+    "tnbudgets_df['year'] = tnbudgets_df['release_date'].dt.year\n",
+    "tnbudgets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
        "[5415 rows x 8 columns]"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,13 +1203,13 @@
    "source": [
     "#calculating the profit made by each movie\n",
     "\n",
-    "df['profit'] = (df['worldwide_gross'] - df['production_budget']).astype(int)\n",
-    "df"
+    "tnbudgets_df['profit'] = (tnbudgets_df['worldwide_gross'] - tnbudgets_df['production_budget']).astype(int)\n",
+    "tnbudgets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "[593 rows x 8 columns]"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,8 +1421,8 @@
    "source": [
     "#checking for outliers based on the profit\n",
     "\n",
-    "Q1 = df['profit'].quantile(0.25)  \n",
-    "Q3 = df['profit'].quantile(0.75)  \n",
+    "Q1 = tnbudgets_df['profit'].quantile(0.25)  \n",
+    "Q3 = tnbudgets_df['profit'].quantile(0.75)  \n",
     "IQR = Q3 - Q1  \n",
     "\n",
     "#outlier range\n",
@@ -1430,13 +1430,13 @@
     "upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
     "#outliers\n",
-    "outliers = df[(df['profit'] < lower_bound) | (df['profit'] > upper_bound)]\n",
+    "outliers = tnbudgets_df[(tnbudgets_df['profit'] < lower_bound) | (tnbudgets_df['profit'] > upper_bound)]\n",
     "outliers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
        "[4822 rows x 8 columns]"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,13 +1635,13 @@
    "source": [
     "#dropping outliers because they represent one off situations where a movie did really well or very poorly\n",
     "\n",
-    "df_clean = df[(df['profit'] >= lower_bound) & (df['profit'] <= upper_bound)]\n",
-    "df_clean"
+    "tnbudgets_dfclean = tnbudgets_df[(tnbudgets_df['profit'] >= lower_bound) & (tnbudgets_df['profit'] <= upper_bound)]\n",
+    "tnbudgets_dfclean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
     "#checking the distribution of profit values using a histogram plot\n",
     "\n",
     "plt.figure(figsize = (10, 6))\n",
-    "sns.histplot(data=df_clean, x='profit', bins = 100, color = 'red', kde = True)\n",
+    "sns.histplot(data=tnbudgets_dfclean, x='profit', bins = 100, color = 'red', kde = True)\n",
     "plt.title('Distribution of profit', fontsize=16)\n",
     "plt.xlabel('Profit', fontsize=12)\n",
     "plt.ylabel('Occurence', fontsize=12)\n",
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -1687,14 +1687,14 @@
        "6967251.0"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#using median to check for central tendency rather than mean due to the skew;\n",
-    "median_value = np.median(df_clean['profit'])\n",
+    "median_value = np.median(tnbudgets_dfclean['profit'])\n",
     "median_value"
    ]
   },
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -1746,12 +1746,12 @@
    "source": [
     "#line plot based on profits\n",
     "\n",
-    "plot_line('profit',df_clean)"
+    "plot_line('profit',tnbudgets_dfclean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
    "source": [
     "#line plot based on revenue\n",
     "\n",
-    "plot_line('worldwide_gross',df_clean)"
+    "plot_line('worldwide_gross',tnbudgets_dfclean)"
    ]
   },
   {
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -1800,7 +1800,7 @@
     "\n",
     "#plotting\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(df_clean.corr(), annot=True, fmt=\".2f\", cmap=\"coolwarm\", cbar=True, square=True)\n",
+    "sns.heatmap(tnbudgets_dfclean.corr(), annot=True, fmt=\".2f\", cmap=\"coolwarm\", cbar=True, square=True)\n",
     "plt.title('Correlation Heatmap')\n",
     "plt.show()\n",
     "\n"
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1835,7 @@
     "plt.figure(figsize=(10, 8))\n",
     "\n",
     "# Scatter plot\n",
-    "sns.scatterplot(x=df_clean['year'], y=df['production_budget'])\n",
+    "sns.scatterplot(x=tnbudgets_dfclean['year'], y=tnbudgets_df['production_budget'])\n",
     "\n",
     "# Labels and Title\n",
     "plt.xlabel(\"Year\")\n",
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,8 +1864,8 @@
     "def regression(a,b):\n",
     "#defining variables\n",
     "\n",
-    "    X = df_clean[a]\n",
-    "    y = df_clean[b]\n",
+    "    X = tnbudgets_dfclean[a]\n",
+    "    y = tnbudgets_dfclean[b]\n",
     "\n",
     "    #adding constant\n",
     "\n",
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.513\n",
       "Method:                 Least Squares   F-statistic:                     5081.\n",
       "Date:                Sat, 25 Jan 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        17:34:28   Log-Likelihood:                -91518.\n",
+      "Time:                        21:44:52   Log-Likelihood:                -91518.\n",
       "No. Observations:                4822   AIC:                         1.830e+05\n",
       "Df Residuals:                    4820   BIC:                         1.831e+05\n",
       "Df Model:                           1                                         \n",
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1966,7 @@
    ],
    "source": [
     "#grouping profit into months\n",
-    "profit_per_month = df_clean.groupby('month')['profit'].mean().reset_index()\n",
+    "profit_per_month = tnbudgets_dfclean.groupby('month')['profit'].mean().reset_index()\n",
     "\n",
     "plt.figure(figsize=(10, 8))\n",
     "\n",
@@ -1980,7 +1980,7 @@
     "plt.xticks(ticks=range(0, 12), labels=['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
     "\n",
     "#adding the line of central tendency\n",
-    "mean_value = np.mean(df_clean['profit'])\n",
+    "mean_value = np.mean(tnbudgets_dfclean['profit'])\n",
     "plt.axhline(median_value, color='red', linestyle='dashed', linewidth=2, label = 'Median')\n",
     "plt.axhline(mean_value, color='blue', linestyle='dashed', linewidth=2, label = 'Mean')\n",
     "plt.legend()\n",
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2222,7 @@
        "[5415 rows x 9 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2230,13 +2230,13 @@
    "source": [
     "#adding column for foreign gross\n",
     "\n",
-    "df['foreign_gross'] = df['worldwide_gross'] - df['domestic_gross']\n",
-    "df"
+    "tnbudgets_df['foreign_gross'] = tnbudgets_df['worldwide_gross'] - tnbudgets_df['domestic_gross']\n",
+    "tnbudgets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -2253,8 +2253,8 @@
    "source": [
     "#visualising the comparison between the domestic and foerign market\n",
     "\n",
-    "average_foreign = df['foreign_gross'].mean()\n",
-    "average_domestic = df['domestic_gross'].mean()\n",
+    "average_foreign = tnbudgets_df['foreign_gross'].mean()\n",
+    "average_domestic = tnbudgets_df['domestic_gross'].mean()\n",
     "\n",
     "#creating a dataframe for the purposes of plotting\n",
     "avg_data = pd.DataFrame({\n",
@@ -2275,12 +2275,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above, we can clearly see that the foregin market is a great contributer in the industry. To solidify our second deduction of expansion of the audience base over the years leading to the rising trend in performance for the industry, let us see how the foreign markert has evolved over the years using a line plot"
+    "From the above, we can clearly see that the foreign market is a great contributer in the industry. To solidify our second deduction of expansion of the audience base over the years leading to the rising trend in performance for the industry, let us see how the foreign markert has evolved over the years using a line plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -2297,14 +2297,7 @@
    "source": [
     "#lineplot of foreign_gross vs year\n",
     "\n",
-    "plot_line('foreign_gross', df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the above plot, there is a clear rising trend in the foreign market especially from the 1990s. "
+    "plot_line('foreign_gross', tnbudgets_df)"
    ]
   }
  ],
