--- a/Group3_p2project.ipynb
+++ b/Group3_p2project.ipynb
@@ -17,10 +17,7 @@
     "4. What impact does the budget have on movie performance?\n",
     "5. What is the optimal time of year to release a movie for maximum success?\n",
     "6. Do certain languages have a broader audience reach?\n",
-    "7. Who are the top-performing directors and writers in the industry? \n",
-    "\n",
-    "#### SUCCESS CRITERIA\n",
-    "\n"
+    "7. Who are the top-performing directors and writers in the industry? "
    ]
   },
   {
@@ -4498,8 +4495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above plots, we can observe that the industry has grown increasingly popular from the 1980s through the 21st century. \n",
-    "This trend shows a rising demand for movies, advancements in production, and the global expansion of the audience base. Let us have a look into the distribution of revenue based on different data."
+    "This trends above show a rising demand for movies, advancements in production, and the global expansion of the audience base over the years. Let us have a look into the distribution of revenue based on different data."
    ]
   },
   {
@@ -4679,7 +4675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this plot we can see that there is a positive correlation between popularity and vote count."
+    "From this plot we can see that there is a positive correlation between popularity and vote count. Let us start answering our objectives."
    ]
   },
   {
@@ -6274,7 +6270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
